# merlya

./: .env.example  .gitignore  404.html  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  EXECUTION_SUMMARY.md  FIXES_SUMMARY.md  INVENTORY_DEEP_ANALYSIS.md  INVENTORY_UX_REFACTOR_PROPOSAL.md  PLAN_INVENTORY_REFACTOR.md  PLAN_SSH_REFACTOR.md  README.md  README_EN.md  REFACTORING_PLAN.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_CREDENTIALS.md  TECHNICAL_DEEP_DIVE.md  VARIABLE_PARSING_EXAMPLES.md  athena.py  docker-compose.yml  index.html  llms.txt  merlya.py  mkdocs.yml  pyproject.toml  reproduce.py  requirements.txt  robots.txt  sitemap.xml  test_regex.py  test_repl.py  test_script.py  verify_commands.py  verify_help.py  verify_regex.py
.github/scripts/: create_mypy_issues.sh
.github/workflows/: ci.yml  command-tests.yml  docker.yml  rag.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md
architecture/: index.html
architecture/decisions/: index.html
athena_ai/: __init__.py  cli.py  repl.py
athena_ai/agents/: __init__.py  adaptive_planner.py  ag2_orchestrator.py  autogen_tools.py  base.py  base_orchestrator.py  chain_of_thought.py  cloud.py  coordinator.py  cot_orchestrator_example.py  diagnostic.py  enhanced_ag2_orchestrator.py  knowledge_tools.py  monitoring.py  orchestrator.py  planner.py  provisioning.py  remediation.py  request_classifier.py  sentinel.py
athena_ai/ci/: __init__.py  config.py  manager.py  models.py  protocols.py  registry.py
athena_ai/commands/: __init__.py  loader.py
athena_ai/context/: __init__.py  cache_manager.py  data_collector.py  discovery.py  host_registry.py  inventory_setup.py  inventory_sources.py  local_scanner.py  manager.py  on_demand_scanner.py  smart_cache.py
athena_ai/core/: __init__.py  exceptions.py  hooks.py  registry.py  types.py
athena_ai/executors/: action_executor.py  ansible.py  auto_corrector.py  aws.py  connectivity.py  k8s.py  ssh.py  ssh_connection_pool.py  terraform.py
athena_ai/inventory/: __init__.py  parser.py  relation_classifier.py
athena_ai/knowledge/: __init__.py  cve_monitor.py  falkordb_client.py  incident_memory.py  ops_knowledge_manager.py  pattern_learner.py  schema.py  storage_manager.py  web_search.py
athena_ai/llm/: litellm_router.py  model_config.py  ollama_client.py  router.py
athena_ai/mcp/: __init__.py  manager.py
athena_ai/memory/: __init__.py  context_memory.py  conversation.py  conversation_history.py  conversation_manager.py  conversation_manager_sqlite.py  migrate_to_sqlite.py  persistent_store.py  session.py  skill_store.py  storage.py
athena_ai/remediation/: action_stack.py  rollback.py
athena_ai/repl/: __init__.py  commands.py  completer.py  core.py  handlers.py  ui.py
athena_ai/security/: __init__.py  audit_logger.py  credentials.py  permissions.py  preflight_checker.py  risk_assessor.py  ssh_credentials.py
athena_ai/tools/: __init__.py  base.py  cicd.py  commands.py  containers.py  files.py  hosts.py  infra_tools.py  interaction.py  security.py  system.py  web.py
athena_ai/triage/: __init__.py  ai_classifier.py  behavior.py  classifier.py  embedding_config.py  error_analyzer.py  priority.py  signals.py  smart_classifier.py
athena_ai/utils/: config.py  config_validator.py  display.py  logger.py  security.py  smooth_display.py  tokenizer.py  verbosity.py
commands/: index.html
configuration/: index.html
docs/: AGENTS.md  ARCHITECTURE.md  CI_CD.md  COMMANDS.md  CREDENTIALS.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MODEL_CONFIG.md  INVENTORY.md  KNOWLEDGE_GRAPH.md  MCP.md  STATISTICS.md  TESTING.md  TOOLS.md  TRIAGE.md  UX.md  VARIABLES.md  architecture.md  commands.md  configuration.md  extending.md  index.fr.md  index.md  llms.txt  ssh.md
docs/architecture/: decisions.fr.md  decisions.md
docs/getting-started/: installation.fr.md
docs/guides/: elevation.md  repl-mode.md  secrets-security.md  ssh-management.md
docs/overrides/: main.html
docs/reference/: non-interactive.md
extending/: index.html
fr/: index.html
fr/architecture/: index.html
fr/commands/: index.html
fr/configuration/: index.html
fr/extending/: index.html
fr/ssh/: index.html
fr/tickets/: index.html
fr/tools/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/automation/: index.html
guides/elevation/: index.html
guides/llm-providers/: index.html
guides/repl-mode/: index.html
guides/secrets-security/: index.html
guides/ssh-management/: index.html
merlya/: __init__.py  cli.py
merlya/agent/: __init__.py  agent_factory.py  confirmation.py  history.py  main.py  orchestrator.py  prompts.py  specialists.py  tools.py  tools_files.py  tools_security.py  tools_web.py  tracker.py
merlya/agents/: __init__.py  autogen_tools.py  base.py  base_orchestrator.py  chain_of_thought.py  cloud.py  coordinator.py  (+9 more)
overrides/: main.html
rag/: package-lock.json  package.json  wrangler.toml
search/: search_index.json
ssh/: index.html
tests/: conftest.py  manual_test_falkordb.py  manual_test_improvements.py  test_agent_conversation.py  test_agent_history.py  test_asyncio_error_suppression.py  test_audit.py  test_basic.py  test_cache_manager.py  test_center_classifier.py  test_ci_adapter_validation.py  test_ci_module.py  test_classifier.py  test_cli_run_tasks.py  test_cloud.py  test_commands_conv_hosts_full.py  test_commands_integration.py  test_commands_mcp.py  test_commands_model.py  test_commands_model_ollama.py  test_commands_scan.py  test_commands_ssh.py  test_commands_ssh_full.py  test_config_env_override.py  test_confirmation.py  test_console_ui.py  test_context_tools.py  test_continuation_detector.py  test_core_context.py  test_credential_ttl.py  test_database.py  test_e2e_commands.py  test_embedding_config.py  test_falkordb_client.py  test_fast_path.py  test_handler.py  test_health_checks.py  test_host_deletion_audit.py  test_host_registry_integration.py  test_host_resolver.py  (+94 more)
tickets/: index.html
tools/: index.html
(+631 files in other folders)
