[tool.poetry]
name = "athena-ai-ops"
version = "0.2.0"
description = "AI-powered infrastructure orchestration CLI - Vibe Infra for DevOps"
authors = ["Athena Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/m-kis/athena"
repository = "https://github.com/m-kis/athena"
documentation = "https://github.com/m-kis/athena#readme"
keywords = ["cli", "infrastructure", "devops", "ai", "automation", "ssh", "autogen", "llm", "ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
]
packages = [{include = "athena_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
# CLI & UI
click = "^8.1"
rich = "^14.0"
prompt_toolkit = "^3.0"
# Remote execution
paramiko = "^3.5"
fabric = "^3.2"
ansible-runner = "^2.4"
netmiko = "^4.4"
# AI/LLM providers (stable 2025 versions)
anthropic = "^0.70"
openai = "^2.0"
litellm = "^1.70"
openai-agents = "^0.6.0"
pyautogen = "^0.10.0"
# Infrastructure
python-terraform = "^0.10"
redis = "^5.2"
sqlalchemy = "^2.0"
# Data validation & security
pydantic = "^2.10"
cryptography = "^44.0"
keyring = "^25.5"
# Utilities
tenacity = "^9.0"
python-dotenv = "^1.0"
pyyaml = "^6.0"
jinja2 = "^3.1"
loguru = "^0.7"
# Data source connectors
psycopg2-binary = "^2.9"
pymysql = "^1.1"
pymongo = "^4.10"
requests = "^2.32"
# Knowledge system (optional)
falkordb = {version = "^1.2", optional = true}
duckduckgo-search = {version = "^8.0", optional = true}

[tool.poetry.extras]
knowledge = ["falkordb", "duckduckgo-search"]
all = ["falkordb", "duckduckgo-search"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
athena = "athena_ai.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "manual: marks tests as manual (deselect with '-m \"not manual\"')",
    "slow: marks tests as slow",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["athena_ai"]
omit = ["athena_ai/__pycache__/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "C4"]
"athena_ai/utils/config_validator.py" = ["F401"]  # import checks in try/except
